# jax_champ

./: README.md  frames_2026-03-21_18.05.57.gv
install/: local_setup.sh  setup.sh
install/champ/include/champ/: LICENSE  README.md
install/champ/include/champ/bla/: basic_linear_algebra.h  memory_delegate.h
install/champ/include/champ/body_controller/: body_controller.h
install/champ/include/champ/geometry/: geometry.h
install/champ/include/champ/kinematics/: kinematics.h
install/champ/include/champ/leg_controller/: leg_controller.h  phase_generator.h  trajectory_planner.h
install/champ/include/champ/macros/: macros.h
install/champ/include/champ/odometry/: odometry.h
install/champ/include/champ/quadruped_base/: quadruped_base.h  quadruped_components.h  quadruped_joint.h  quadruped_leg.h
install/champ/include/champ/utils/: urdf_loader.h  xmlrpc_helpers.h
install/champ/share/champ/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
install/champ/share/champ/cmake/: ament_cmake_export_include_directories-extras.cmake  champConfig-version.cmake  champConfig.cmake
install/champ/share/champ/environment/: ament_prefix_path.dsv  path.dsv
install/champ_base/share/champ_base/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
install/champ_base/share/champ_base/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  champ_baseConfig-version.cmake  champ_baseConfig.cmake
install/champ_base/share/champ_base/environment/: ament_prefix_path.dsv  path.dsv
install/champ_msgs/share/champ_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
install/champ_msgs/share/champ_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  champ_msgsConfig-version.cmake  champ_msgsConfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/champ_msgs/share/champ_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/champ_msgs/share/champ_msgs/msg/: Contacts.idl  Contacts.json  Contacts.msg  ContactsStamped.idl  ContactsStamped.json  ContactsStamped.msg  Imu.idl  Imu.json  Imu.msg  Joints.idl  Joints.json  Joints.msg  PID.idl  PID.json  PID.msg  Point.idl  Point.json  Point.msg  PointArray.idl  PointArray.json  PointArray.msg  Pose.idl  Pose.json  Pose.msg  Velocities.idl  Velocities.json  (+1 more)
install/jax_behaviors/lib/jax_behaviors/: jax_behavior_node.py  jax_mode_manager.py
install/jax_behaviors/share/jax_behaviors/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.sh  package.xml  package.zsh
install/jax_bringup/share/jax_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.sh  package.xml  package.zsh
install/jax_description/share/jax_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
install/jax_locomotion/share/jax_locomotion/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.sh  package.xml  package.zsh
install/jax_teleop/lib/jax_teleop/: jax_keyboard_node.py  jax_velocity_smoother.py
install/jax_teleop/share/jax_teleop/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.sh  package.xml  package.zsh
log/: latest_build
src/camera_ros/src/: ParameterHandler.cpp
src/jax_behavior/: CMakeLists.txt  package.xml
src/jax_behavior/scripts/: mode_manager.py  poses.py
src/jax_behaviors/: CMakeLists.txt  package.xml
src/jax_behaviors/scripts/: jax_behavior_node.py  jax_mode_manager.py
src/jax_bringup/: CMakeLists.txt  package.xml
src/jax_bringup/config/: joint_calibration.yaml
src/jax_bringup/launch/: gazebo_rviz.launch.py  imu_stabilizer.launch.py  jax_launch.py  jax_system.launch.py  robot_launch.py  rviz_launch.py  sim_launch.py  test_champ.launch.py  vision_launch.py
src/jax_bringup/rviz/: rviz.rviz
src/jax_bringup/scripts/: jax_display_node.py  jax_serial_bridge.py  joint_remapper.py
src/jax_description/: CMakeLists.txt
src/jax_description/config/: geometry.yaml
src/jax_description/meshes/: lf_foot.stl  lf_hip.stl  lf_lower_leg.stl  lf_upper_leg.stl  lh_foot.stl  lh_hip.stl  lh_lower_leg.stl  lh_upper_leg.stl  rf_foot.stl  rf_hip.stl  rf_lower_leg.stl  rf_upper_leg.stl  rh_foot.stl  rh_hip.stl  rh_lower_leg.stl  rh_upper_leg.stl
src/jax_description/urdf/: const.xacro  jax_gazebo.xacro  jax_robot.xacro  leg.xacro  realsense_d455.xacro
src/jax_hardware/: CMakeLists.txt  package.xml
src/jax_hardware/config/: jax_display.yaml  joint_calibration.yaml
src/jax_hardware/scripts/: jax_display_node.py  jax_serial_bridge.py  jax_wifi_status_publisher.py
src/jax_locomotion/: CMakeLists.txt  package.xml
src/jax_locomotion/config/: imu_stabilizer.yaml  linkage_compensator.yaml
src/jax_locomotion/config/follow/: jax_simple_calf_follow.yaml
src/jax_locomotion/config/gait/: gait.yaml
src/jax_locomotion/config/imu/: imu_stabilizer.yaml
src/jax_locomotion/config/linkage/: jax_linkage_envelope.yaml
src/jax_locomotion/config/motion/: motion.yaml
src/jax_locomotion/config/ros_control/: ros_control.yaml
src/jax_locomotion/scripts/: champ_leg_height_wrapper.py  jax_imu_cmdvel_stabilizer.py  jax_imu_leg_height_stabilizer.py  jax_joint_state_to_trajectory.py  jax_leg_safety.py  jax_linkage_compensator.py  jax_linkage_envelope.py  jax_simple_calf_follow.py
src/jax_teleop/: CMakeLists.txt  package.xml
src/jax_teleop/launch/: jax_keyboard.launch.py
src/jax_teleop/scripts/: jax_app_controller.py  jax_keyboard_node.py  jax_velocity_smoother.py
(+210 files in other folders)
