<?xml version="1.0"?>
<package format="3">
  <name>jax_behaviors</name>
  <version>0.0.0</version>
  <description>Behavior and mode management for Jax</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <exec_depend>champ_base</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>