<?xml version="1.0"?>
<package format="3">
  <name>jax_teleop</name>
  <version>0.0.0</version>
  <description>Keyboard teleop for Jax quadruped</description>

  <maintainer email="you@todo.com">you</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>